# iot_authentication

./: README.md  analysis.py  app.py  pyproject.toml
models/good_anomaly_detection/: learner.pkl
models/good_anomaly_detection/models/: trainer.pkl
models/good_anomaly_detection/models/LightGBM_BAG_L1_FULL/: model.pkl
models/good_anomaly_detection/utils/data/: X.pkl  y.pkl
models/good_authentication/: learner.pkl
models/good_authentication/models/: trainer.pkl
models/good_authentication/models/CatBoost_BAG_L1_FULL/: model.pkl
models/good_authentication/models/CatBoost_r128_BAG_L1_FULL/: model.pkl
models/good_authentication/models/CatBoost_r12_BAG_L1_FULL/: model.pkl
models/good_authentication/models/CatBoost_r137_BAG_L1_FULL/: model.pkl
models/good_authentication/models/CatBoost_r137_BAG_L2_FULL/: model.pkl
models/good_classification/: learner.pkl  metadata.json  predictor.pkl
models/good_classification/models/: trainer.pkl
pop-os/auth/: a_331.json  a_380.json  a_665.json  a_693.json  a_740.json
pop-os/fingerprints/: f_1.txt  f_10.txt  f_100.txt  f_1000.txt  f_1001.txt  f_1002.txt  f_1003.txt  f_1004.txt  f_1005.txt  f_1006.txt  f_1007.txt  f_1008.txt  f_1009.txt  f_101.txt  f_1010.txt  f_1011.txt  f_1012.txt  f_1013.txt  f_1014.txt  f_1015.txt  f_1016.txt  f_1017.txt  f_1018.txt  f_1019.txt  f_102.txt  f_1020.txt  f_1021.txt  f_1022.txt  f_1023.txt  f_1024.txt  f_1025.txt  f_1026.txt  f_1027.txt  f_1028.txt  f_1029.txt  f_103.txt  f_1030.txt  f_1031.txt  f_1032.txt  f_1033.txt  (+1154 more)
static/: onscreen.html
(+67 files in other folders)
