[project]
name = "iot-authentication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "autogluon>=1.1.1",
    "sanic>=24.6.0",
    "sanic-ext>=23.12.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.2",
    "scikit-learn>=1.4.0",
]
